Fixed the timeline view Events and Axis labels overlapping the headers.

--- a/src/calendar.js.scss
+++ b/src/calendar.js.scss
@@ -1749,7 +1749,7 @@ div.calendar {
                 border-bottom: var(--calendar-js-spacing-border-size) solid var(--calendar-js-grid-border-color);
                 top: 0;
                 vertical-align: top;
-                z-index: 10;
+                z-index: 2010;
                 
                 div.timeline-header-item {
                     display: inline-block;
